Fix wrong width

--- a/src/widgets/WeatherWidget.css
+++ b/src/widgets/WeatherWidget.css
@@ -17,7 +17,7 @@
 }
 
 .weatherImage {
-  width: 100%;
+  width: 50%;
   min-width: 95px;
   min-height: 95px;
   background-repeat: no-repeat;
